fixed height with ems; TODO: assets per device, fix whitespace on the right

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,6 +1,9 @@
-.carousel-item.img{
-	width: 100%;
-	height: 50%;
+.carousel-item img {
+  width:100%;
+  min-width:100%;
+	height: 42em;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 a , .top-bar-section ul li > a {
